repuration de la liste des comptes
